--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.5.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
+    "number-to-words": "^1.2.4",
     "pdfkit": "^0.15.1",
     "puppeteer": "^23.9.0"
   }
