--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "html-pdf-node": "^1.0.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
     "number-to-words": "^1.2.4",
-    "pdfkit": "^0.15.1",
-    "puppeteer": "^23.9.0"
+    "pdfkit": "^0.15.1"
   }
 }
