--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "html-pdf": "^3.0.1",
+    "jsdom": "^25.0.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "mongoose": "^8.5.2",
+    "node-html-to-pdf": "^1.0.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.4",
     "number-to-words": "^1.2.4",
-    "pdfkit": "^0.15.1"
+    "pdfkit": "^0.15.1",
+    "pdfmake": "^0.2.15"
   }
 }
